# NetGuardia

./: .gitignore  Cargo.toml  README.md  config.toml
net-guardia/: Cargo.toml  build.rs
net-guardia-common/: Cargo.toml
net-guardia-common/src/: lib.rs
net-guardia-ebpf/: Cargo.toml
net-guardia-ebpf/src/: filter.rs  forward.rs  main.rs  monitor.rs  parsing.rs  temp.txt  utils.rs
net-guardia-egress-ebpf/: Cargo.toml
net-guardia-egress-ebpf/src/: main.rs
net-guardia-egress-ebpf/src/action/: statistics.rs
net-guardia-ingress-ebpf/: Cargo.toml
net-guardia-ingress-ebpf/src/: main.rs
net-guardia/src/: main.rs  temp.txt
net-guardia/src/core/: ai.rs  blocking.rs  config_manager.rs  control.rs  mod.rs  monitor.rs  statistics.rs  system.rs
net-guardia/src/core/control/: access_control.rs  access_list.rs  defence.rs  mod.rs  sampling.rs  service.rs
net-guardia/src/model/: alert.rs  config.rs  direction.rs  flow_stats.rs  flow_type.rs  http_method.rs  ip_address.rs  list_type.rs  mod.rs  time_type.rs
net-guardia/src/utils/: definition.rs  ip_address.rs  logging.rs  mod.rs
net-guardia/src/utils/log_entry/: ebpf.rs  mod.rs  system.rs
net-guardia/src/web/api/: ai.rs  control.rs  misc.rs  mod.rs  monitor.rs  statistics.rs
net-guardia/src/web/api/control/: access_control.rs  access_list.rs  defence.rs  mod.rs  sampling.rs  service.rs
net-guardia/src/web/utils/: alert_websocket.rs  flow_websocket.rs  map_util.rs  mod.rs
net-guardia/static/web/: index.html
net-guardia/static/web/assets/: index-BLvNN6v5.js  index-zHxCX2TQ.css
(+27 files in other folders)
