[package]
name = "net-guardia-egress-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
net-guardia-common = { path = "../net-guardia-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "net-guardia-egress"
path = "src/main.rs"
