[package]
name = "net-guardia"
version = "0.1.0"
edition = "2021"

[dependencies]
net-guardia-common = { path = "../net-guardia-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time", "fs"] }

serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
thiserror = "2.0.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
actix-web = "4.9.0"
rust-embed = "8.5.0"
actix-cors = "0.7.0"
actix = "0.13.5"
mime_guess = "2.0.5"
actix-web-actors = "4.3.0"

[build-dependencies]
cargo_metadata = { workspace = true }

[[bin]]
name = "net-guardia"
path = "src/main.rs"
